deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '2'
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "openshift-rbac:latest"
          },
          "fieldPath": "spec.template.spec.containers[0].image"
        }
      ]
  selfLink: /apis/apps/v1/namespaces/rbac-lab/deployments/openshift-rbac
  name: openshift-rbac
  namespace: rbac-lab
  labels:
    app: openshift-rbac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openshift-rbac
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: openshift-rbac
    spec:
      containers:
        - name: openshift-rbac
          image: quay.io/jquigley/openshift-rbac:latest
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 200m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
