service.yaml
kind: Service
apiVersion: v1
metadata:
  name: openshift-rbac
  namespace: rbac-lab
  labels:
    app: openshift-rbac
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: openshift-rbac
  type: ClusterIP
  sessionAffinity: None
