route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: openshift-rbac
  namespace: rbac-lab
  labels:
    app: openshift-rbac
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: openshift-rbac
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
